🐝 fix: alignment bug on mobile

--- a/src/ducks/commons/Topbar.styl
+++ b/src/ducks/commons/Topbar.styl
@@ -31,6 +31,7 @@ $coz-bar-size = 48px
         > h2
             font-size 1.3em
             margin    0
+            margin-left 1rem
 
     .Topbar-left
         position fixed
